Use more lombok and other code style improvements
Use Map instead of ImmutableMap
Use List.of instead of Collections.emptyList
Clean imports
Extract method in GameService
Use line breaks in stream operations